base-kubernetes/serviceZipkin.yaml

apiVersion: v1
kind: Service
metadata:
  name: zipkin
spec:
  type: ClusterIP
  selector:
    app: zipkin
  ports:
    - name: zipkin
      protocol: TCP
      port: 9411
