base-kubernetes/servicesClusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: storefront
spec:
  type: ClusterIP
  selector:
    app: storefront
  ports:
    - name: storefront
      protocol: TCP
      port: 8080
    - name: storefront-mgt
      protocol: TCP
      port: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: stockmanager
spec:
  type: ClusterIP
  selector:
    app: stockmanager
  ports:
    - name: stockmanager
      protocol: TCP
      port: 8081
    - name: stockmanager-mgt
      protocol: TCP
      port: 9081
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin
spec:
  type: ClusterIP
  selector:
    app: zipkin
  ports:
    - name: zipkin
      protocol: TCP
      port: 9411
