base-kubernetes/ingressConfig.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: direct-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts: 
    # <External IP> must be replaced with the IP address of the ingress controller
    - store.<External IP>.nip.io
    secretName: tls-store
  rules:
    # <External IP> must be replaced with the IP address of the ingress controller
  - host: store.<External IP>.nip.io
    http:
      paths:
      - path: /zipkin
        backend:
          serviceName: zipkin
          servicePort: zipkin
      - path: /store
        backend:
          serviceName: storefront
          servicePort: storefront
      - path: /stocklevel
        backend:
          serviceName: stockmanager
          servicePort: stockmanager
      - path: /openapi
        backend:
          serviceName: storefront
          servicePort: storefront
          
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rewrite-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # rewrite the requests
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts: 
    # <External IP> must be replaced with the IP address of the ingress controller
    - store.<External IP>.nip.io
    secretName: tls-store
  rules:
    # <External IP> must be replaced with the IP address of the ingress controller
  - host: store.<external IP>.nip.io
    http:
      paths:
        #any path starting with sf will have the /sf removed before being passed to the service on the specified url
        #for example this handles /sf/status -> /status and /sf/minimumChange -> /minimumChange on arrival at the 
        #storefront server
      - path: /sf(/|$)(.*)
        backend:
          serviceName: storefront
          servicePort: storefront
        #any path starting with sm will have the /sm removed before being passed to the service on the specified url
        #for example this handles /sm/status -> /status on arrival at the storefront server
      - path: /sm(/|$)(.*)
        backend:
          serviceName: stockmanager
          servicePort: stockmanager
        #any path starting with sfmtg will have the /sfmgt removed before being passed to the service on the specified url
      - path: /sfmgt(/|$)(.*)
        backend:
          serviceName: storefront
          servicePort: storefront-mgt
        #any path starting with smmtg will have the /smmgt removed before being passed to the service on the specified url
      - path: /smmgt(/|$)(.*)
        backend:
          serviceName: stockmanager
          servicePort: stockmngr-mgt
