base-kubernetes/ingressZipkinRules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zipkin-direct-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts: 
    # ${EXTERNAL_IP} must be replaced with the IP address of the ingress controller
    - store.${EXTERNAL_IP}.nip.io
    secretName: tls-store
  rules:
    # ${EXTERNAL_IP} must be replaced with the IP address of the ingress controller
  - host: store.${EXTERNAL_IP}.nip.io
    http:
      paths:
      - path: /zipkin
        pathType: Prefix
        backend:
          service:
            name: zipkin
            port:
              name: zipkin
